tdf#123943 sw btlr writing mode render: fix text portion background

The text frame is swapped in this case, so handle BTLR similar to the
normal vert (TBRL) case and the background will be positioned correctly
behind the text portion.

Change-Id: I2399131ef74ea8849577a467ad9bb02d980d8609