sw/qa/extras/layout/layout.cxx
@@ -2817,6 +2817,11 @@ void SwLayoutWriter::testBtlrCell()
     assertXPath(pXmlDoc, "//textarray[1]", "x", "1915");
     assertXPath(pXmlDoc, "//textarray[1]", "y", "2707");
 
+    // Without the accompanying fix in place, this test would have failed with 'Expected: 1979;
+    // Actual  : 2129', i.e. the gray background of the "AAA2." text was too close to the right edge
+    // of the text portion. Now it's exactly behind the text portion.
+    assertXPath(pXmlDoc, "//rect[@top='2159']", "left", "1979");
+
     // Without the accompanying fix in place, this test would have failed with 'Expected: 269;
     // Actual  : 0', i.e. the AAA2 frame was not visible due to 0 width.
     pXmlDoc = parseLayoutDump();
